# setuptools-changelog

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py
changelog.d/: autoreleases.build.rst  basic.test.rst  changelog.build.rst  contributing-typo.doc.rst  contributing.doc.rst  defaults.feature.rst  fragment.build.rst  next-version.feature.rst  no-changes.bug.rst  py27.build.rst  pylint-distutils.test.rst  readme-typo.doc.rst  readme.doc.rst  release-version.build.rst  release.epic.rst  semver.feature.rst  setuptools-egg_info.build.rst  setuptools.doc.rst  towncrier.feature.rst  update.feature.rst
src/setuptools_changelog/: changelog.py
tests/: conftest.py  test_changelog.py  test_pkg.py
tests/major/: 1.breaking.rst
tests/minor/: cool.feature.rst  zero.bug.rst
tests/patch/: 42.bug.rst
