#
# Copyright 2017, Alexander Shorin
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[aliases]
test = pytest

[coverage:report]
exclude_lines =
    @abc.abstractmethod
    @abc.abstractproperty
    NotImplementedError
    pragma: no cover
    __repr__
    __str__
precision = 2
show_missing = True

[coverage:run]
branch = True
source =
    src
    tests
include =
    src/**/*.py
    tests/*.py
    tests/**/*.py

[isort]
atomic = true
default_section = FIRSTPARTY
include_trailing_comma = true
indent = '    '
known_first_party =
known_third_party =
line_length = 79
lines_after_imports = 2
multi_line_output = 3
order_by_type = true
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[metadata]
author = Alexander Shorin
author_email = kxepal@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries
description = Setuptools extension to help generate change logs
keywords = setuptools, build, changelog
license = Apache 2.0
long_description = file: README.rst
name = setuptools-changelog
url = https://github.com/kxepal/setuptools-changelog
version =

[options]
packages = find:
package_dir =
    = src
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.packages.find]
where = src

[options.entry_points]
distutils.commands =
    changelog = setuptools_changelog.changelog:ChangeLog

[options.extras_require]
develop =
    autoflake==1.0
    mock==2.0.0
    pytest-cov==2.5.1
    pytest-flake8==0.9.1
    pytest-isort==0.1.0
    pytest-pylint==0.7.1
    pytest-runner
    pytest-sugar==0.9.0
    pytest==3.2.3

[tool:pytest]
addopts =
    --verbose
    --showlocals
python_files = tests/*.py
